module/core/derive_tools/tests/inc/add/compile_fails/generic_struct_basic.rs
use derive_tools::{ Add, Sub };

// // T1.5: Generic struct (should not compile)
#[derive(Add, Sub)]
pub struct GenericStruct<T> { x: T }

fn main()
{
}
