module/core/derive_tools/tests/inc/add/compile_fails/generic_struct_basic.stderr
error[E0369]: cannot add `T` to `T`
 --> tests/inc/add/compile_fails/generic_struct_basic.rs
  |
  | #[derive(Add, Sub)]
  |          ^^^
  |
  = note: this error originates in the derive macro `Add` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Add`
  |
5 | pub struct GenericStruct<T: std::ops::Add<Output = T>> { x: T }
  |                           +++++++++++++++++++++++++++

error[E0369]: cannot subtract `T` from `T`
 --> tests/inc/add/compile_fails/generic_struct_basic.rs
  |
  | #[derive(Add, Sub)]
  |               ^^^
  |
  = note: this error originates in the derive macro `Sub` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Sub`
  |
5 | pub struct GenericStruct<T: std::ops::Sub<Output = T>> { x: T }
  |                           +++++++++++++++++++++++++++
